# cloakchain

./: Cargo.toml  README.md
circuits/bb_pv_local/: Nargo.toml
circuits/bb_pv_local/src/: lib.nr
circuits/coinproof/: Nargo.toml  gen_base_prover.py  gen_step2_prover.py  gen_step_prover.py
circuits/coinproof/src/: main.nr
circuits/coinproof_base/: Nargo.toml  gen_prover.py
circuits/coinproof_base/src/: main.nr
circuits/spend/: Nargo.toml  gen_spend_prover.py
circuits/spend/src/: main.nr
docs/: divf_crash_diagnostics.md
groth16-verifier/: Cargo.toml
groth16-verifier/src/: lib.rs
groth16-verifier/test-fixtures/: valid_spend_vkey_hash.txt
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program-coinproof/: Cargo.toml
program-coinproof/src/: groth16.rs  main.rs
program-spend/: Cargo.toml
program-spend/src/: main.rs
program-vfy-g16/: Cargo.toml
program-vfy-g16/src/: main.rs
program/src/: main.rs
script/: Cargo.toml  build.rs
