[workspace]
members = ["lib", "program-spend", "program-coinproof", "program-vfy-g16", "groth16-verifier", "script"]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "*"

[patch.crates-io]
sp1-recursion-executor = { path = "vendor/sp1-recursion-executor" }
sp1-recursion-circuit = { path = "vendor/sp1-recursion-circuit" }
sp1-prover = { path = "vendor/sp1-prover" }

