[package]
name = "cloakkchain-groth16-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254    = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ec       = { version = "0.4.2", default-features = false }
ark-ff       = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
sha2         = { version = "0.10.8", default-features = false }
