[package]
name = "cloakkchain-groth16-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
snark-bn254-verifier = { path = "../vendor/snark-bn254-verifier" }
bn                   = { path = "../vendor/substrate-bn", package = "substrate-bn" }
sha2                 = { version = "0.10.8", default-features = false }
