[package]
name = "cloakkchain-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
sha2 = { version = "0.10.8" }
bincode = { version = "1.3.3" }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
