[package]
version = "0.1.0"
name = "cloakkchain-program-spend"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "6.0.1", features = ["lib", "verify"] }
sp1-verifier = { version = "6.2.3", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
bincode = { version = "1.3.3" }
cloakkchain-lib = { path = "../lib" }
