[package]
version = "0.1.0"
name = "cloakkchain-script"
edition = "2021"
default-run = "cloakkchain"

[[bin]]
name = "cloakkchain"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
blake2    = { version = "0.10" }
serde     = { version = "1.0.200", features = ["derive"] }
serde_json= { version = "1.0" }
bincode   = { version = "1.3.3" }
sha2      = { version = "0.10.8" }
clap      = { version = "4.0", features = ["derive"] }
hex       = "0.4.3"
cloakkchain-lib = { path = "../lib" }
