[package]
version = "0.1.0"
name = "cloakkchain-script"
edition = "2021"
default-run = "cloakkchain"

[[bin]]
name = "cloakkchain"
path = "src/bin/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
bincode = { version = "1.3.3" }
sha2 = { version = "0.10.8" }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
cloakkchain-lib = { path = "../lib" }
dotenv = "0.15.0"
libc = "0.2"

[build-dependencies]
sp1-build = { version = "6.0.1" }
